--- a/BasicTag.html
+++ b/BasicTag.html
@@ -159,27 +159,37 @@
         loop 속성 : 무한 재생을 할것인지를 결정
     -->
 
+     <!--video 태그를 사용하는법-->
+     <video src="test.mp4" type="video/mp4" controls="controls">
+    </video>
 
     <p>-----------------</p>
     <br />
     <br />
     <p>베이직 태그 사용 예시</p>
 
-    <table width=300 border="1">
-        <tr>
-            <td>
-                <h1>주간 히트 노래</h1>
-                <hr />
-                <ol>
-                    <li><img src="" alt=""><a href="#none">TEST1</a></li>
-                    <li><img src="" alt=""><a href="#none">TEST2</a></li>
-                    <li><img src="" alt=""><a href="#none">TEST3</a></li>
-                    <li><img src="" alt=""><a href="#none">TEST4</a></li>
-                    <li><img src="" alt=""><a href="#none">TEST5</a></li>
-                </ol>
-                <p><audio src="" controls="controls" autoplay="autoplay" loop="loop"></audio></p>
-            </td>
-        </tr>
+    <table width="300" border="1">
+      <tr>
+        <td>
+          <h1>주간 히트 노래</h1>
+          <hr />
+          <ol>
+            <li><img src="" alt="" /><a href="#none">TEST1</a></li>
+            <li><img src="" alt="" /><a href="#none">TEST2</a></li>
+            <li><img src="" alt="" /><a href="#none">TEST3</a></li>
+            <li><img src="" alt="" /><a href="#none">TEST4</a></li>
+            <li><img src="" alt="" /><a href="#none">TEST5</a></li>
+          </ol>
+          <p>
+            <audio
+              src=""
+              controls="controls"
+              autoplay="autoplay"
+              loop="loop"
+            ></audio>
+          </p>
+        </td>
+      </tr>
     </table>
   </body>
 </html>
