--- a/LayoutTag.html
+++ b/LayoutTag.html
@@ -20,6 +20,7 @@
     <span>inline_03</span>
     <span>inline_04</span>
     <span>inline_05</span>
+    <!--코드상에서 밑으로 나열했어도, 실제론 옆으로 나열됨-->
 
 
     <p>block tag</p>
@@ -34,14 +35,14 @@
     </ul>
 
     <div>1111</div><div>2222</div><div>3333</div><div>4444</div><div>5555</div>
-    <!--div는 블럭태그로 밑으로 나열됨-->
+    <!--div는 블럭태그로 코드상에 옆으로 나열 했어도, 밑으로 나열됨-->
 
     <div>1111</div>
     <div>2222</div>
     <div>3333</div>
     <div>4444</div>
     <div>5555</div>
-    <!--div는 라인태그: 옆으로 나열됨-->
+    <!--div는 라인태그: 밑으로 나열됨-->
 
   </body>
 
