--- a/CSS3/id_class_mixed_selector.html
+++ b/CSS3/id_class_mixed_selector.html
@@ -10,6 +10,8 @@
         background-color : #ffd800;
         border : 1px solid #808080;
         text-align : center;
+        font-weight: bold;
+        font-size: 2em;
       }
 
       #wrap {
@@ -47,11 +49,18 @@
       .menu1, .menu3, .menu5 {
         font-size : 20px;
       }
+
+      ul li.menu1 {
+        color:red;
+      }
     </style>
 
-    <!--div는 기본적으로 블록태그로, 밑으로 쭉 나열되지만 CSS속성에 float:left; 를 주면 옆으로 나열 됨
+    <!--tag,id,class 선택자를 혼합하여 html을 변경할수있어야한다.-->
+
+    <!--div는 기본적으로 블록태그로, 밑으로 쭉 나열되지만 CSS속성에 float:left; 를 주면 공간이 있을때 옆으로 나열 됨
     또한 이 경우에, 해당 div를 싸고 있는 #wrap 클래스에 overflow:hidden; 을 줘야함-->
     <!--clear:both; 는 float:left;가 영향을 줄 수 있으므로 깨끗히 속성 삭제하기위함-->
+    <!--font-size : 2em 은 두배로 키운다는 뜻-->
   </head>
 
   <body>
