--- a/CSS3/child_descendant_selector.html
+++ b/CSS3/child_descendant_selector.html
@@ -28,7 +28,7 @@
     문법 : A B{속성: 속성값;} ==> A안의 모든 B태그를 선택 (깊이는 상관없다)
 
     자손 선택자(child selector)는 태그 내의 특정 요소 자식만 선택한다. (자식 이후, 후손들 포함하지 않음)
-    문법 : A > B {속성: 속성값;} ==> A태그 바로 밑에서 B값을 찾음
+    문법 : A > B {속성: 속성값;} ==> A태그 바로 밑에서 B값을 (무두) 찾음
 -->
 
 <body>
