--- a/HTML5/semanticTag.html
+++ b/HTML5/semanticTag.html
@@ -3,7 +3,7 @@
 <html lang="en" xmls="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>LayoutTag</title>
+    <title>SemanticTag</title>
   </head>
 
   <body>
@@ -31,7 +31,7 @@
       <p>HTML5 is good!</p>
       <hr />
     </section>
-    <!--본문-->
+    <!--본문(content)-->
 
     <footer>
       <p>xxx주식회사 부산광역시 금정구</p>
