--- a/CSS3/child_descendant_selector.html
+++ b/CSS3/child_descendant_selector.html
@@ -59,6 +59,6 @@
     </div>
 
     <div id="footer">
-        <img src="http://www.sba.seoul.kr/kr/images/footer/copyright.png">
+        <img src="test.png">
     </div>
 </body>
