--- a/CSS3/link_negation_selector.html
+++ b/CSS3/link_negation_selector.html
@@ -51,8 +51,8 @@
 
         <div id="footer">
             <ul>
-                <li><img src="http://www.sba.seoul.kr/kr/images/footer/f_logo.png"></li>
-                <li><img src="http://www.sba.seoul.kr/kr/images/footer/copyright.png"></li>
+                <li><img src="test.png"></li>
+                <li><img src="test1.png"></li>
             </ul>
         </div>
     </div>
