--- a/CSS3/property_selector_CSS.html
+++ b/CSS3/property_selector_CSS.html
@@ -35,6 +35,6 @@
             비밀번호 : <input type="password"/> <br />
             전화번호 : <input type="tel"/> <br />
         </form>
-        <img src="http://www.sba.seoul.kr/kr/images/header/Navi_dr.png" alert="image"/> <br />
+        <img src="http://www.test.com" alert="image"/> <br />
     </body>
 </html>
