--- a/STANDARD_WEB/web/index.html
+++ b/STANDARD_WEB/web/index.html
@@ -15,6 +15,8 @@
     
     <!--웹 폰트-->
     <link href="https://fonts.googleapis.com/css?family=Courier+Prime&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Brush+Script&display=swap" rel="stylesheet">
+
 </head>
 <body>
    <!--스킵 네비게이션(웹 접근성) -->
@@ -44,7 +46,7 @@
                     <!--이미지를 표현하는 방법
                         1. img태그로 표현(의미가 있을 때) / alt- 대체 문자 표현 (웹 접근성)
                         2. background 속성으로 표현(의미가 없을 때) - 대체 문자를 쓸수없음.
-                        3. 이미지를 background 속성으로 사용하는 경우 / 가상으로 대체문자를 만들어줌(IR 기법)
+                        3. 이미지를 background 속성으로 사용하는 경우 / 가상으로 대체 문자를 만들어줌(IR 기법)
                             이미지 스프라이트 기법을 이용하면 편하고 이미지 용량이 반 정도로 줄어들기 때문에 요즘 사용하는 추세. (웹 표준을 준수하기 위해)
                         -->
                     <div class="header-icon">
@@ -118,7 +120,12 @@
             </div>
             <!--//cont_nav-->
             <div id="cont_tit">
-                <div class="container">cont_tit</div>
+                <div class="container">cont_tit
+                    <div class="tit">
+                        <h2>"나는 엔지니어다!"</h2>
+                        <a href="#" class="btn"><span class="ir_pm">전체 메뉴</span></a>
+                    </div>
+                </div>
             </div>
             <!--//cont_tit-->
             <div id="cont_ban">
