--- a/STANDARD_WEB/web/index.html
+++ b/STANDARD_WEB/web/index.html
@@ -120,7 +120,7 @@
             </div>
             <!--//cont_nav-->
             <div id="cont_tit">
-                <div class="container">cont_tit
+                <div class="container">
                     <div class="tit">
                         <h2>"나는 엔지니어다!"</h2>
                         <a href="#" class="btn"><span class="ir_pm">전체 메뉴</span></a>
@@ -129,11 +129,80 @@
             </div>
             <!--//cont_tit-->
             <div id="cont_ban">
-                <div class="container">cont_ban</div>
+                <div class="container">
+                   <div class="ban">
+                        <a href="#" class="prev"><span class="ir_pm">이전 이미지</span></a>
+                        <ul>
+                            <li class="ban_img1"><a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"></a></li>
+                            <li class="ban_img2"><a href="#"><img src="img/banner_link2.jpg" alt="CSS 버튼 만들기"></a></li>
+                            <li class="ban_img3"><a href="#"><img src="img/banner_link3.jpg" alt="로그인 폼 만들기"></a></li>
+                        </ul>
+                        <a href="#" class="next"><span class="ir_pm">다음 이미지</span></a>
+                    </div>
+                </div>
             </div>
             <!--//cont_ban-->
             <div id="cont_cont">
-                <div class="container">cont_cont</div>
+                <div class="container">
+                    <div class="cont">
+                        <div class="column col1">
+                            <h3><span class="ico_img ir_pm">아이콘</span><span class="ico_tit">Notice</span></h3>
+                            <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            <!-- 게시판 -->
+                            <div class="notice">
+                                <h4>Web Publisher Notice</h4>
+                                <ul>
+                                    <li><a href="#">display:inline과 display:block의 차이점은 무엇인가요?</a></li>
+                                    <li><a href="#">HTML 태그중에 dl,dd,ul,ol,li의 차이점은 무엇인가요? </a></li>
+                                    <li><a href="#">HTML 태그중에 strong과 em태그의 차이점은 무엇인가요?</a></li>
+                                    <li><a href="#">컨텐츠 요소를 가운데로 오게하는 방법을 알려주세요!</a></li>
+                                    <li><a href="#">독타입을 선언하는 이유에 대해서 설명하세요.</a></li>
+                                </ul>
+                                <a href="#" class="more ir_pm" title="더보기">더보기</a>
+                            </div>
+                            <!-- //게시판 -->            
+                            <!-- 게시판 -->
+                            <div class="notice2">
+                                <h4>Web Designer Notice</h4>
+                                <ul>
+                                    <li><a href="#">JPG, PNG, GIF의 차이점은 무엇인가요?</a><span>2020.01.17</span></li>
+                                    <li><a href="#">UI 디자인과 UX 디자인의 차이점을 설명하세요</a><span>2020.01.17</span></li>
+                                    <li><a href="#">인터랙션 디자인의 핵심은 무엇이라고 생각하나요?</a><span>2020.01.17</span></li>
+                                    <li><a href="#">포트폴리오를 하면서 가장 잘했다고 생각하는 부분은 무엇인가요 ?</a><span>2020.01.17</span></li>
+                                    <li><a href="#">웹 디자인과 모바일 디자인의 차이가 무엇이라고 생각하나요 ?</a><span>2020.01.17</span></li>
+                                </ul>
+                                <a href="#" class="more ir_pm" title="더보기">더보기</a>
+                            </div>
+                            <!-- //게시판 -->
+                        </div> 
+                        <!-- col1 -->
+                        <div class="column col2">
+                            <h3><span class="ico_img ir_pm">아이콘</span><span class="ico_tit">Notice</span></h3>
+                            <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                        </div> 
+                        <!-- col2 -->
+                        <div class="column col3">
+                            <h3><span class="ico_img ir_pm">아이콘</span><span class="ico_tit">Notice</span></h3>
+                            <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                        </div> 
+                        <!-- col3 -->
+                        <div class="column col4">
+                            <h3><span class="ico_img ir_pm">아이콘</span><span class="ico_tit">Notice</span></h3>
+                            <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                        </div> 
+                        <!-- col4 -->
+                        <div class="column col5">
+                            <h3><span class="ico_img ir_pm">아이콘</span><span class="ico_tit">Notice</span></h3>
+                            <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                        </div> 
+                        <!-- col5 -->
+                        <div class="column col6">
+                            <h3><span class="ico_img ir_pm">아이콘</span><span class="ico_tit">Notice</span></h3>
+                            <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                        </div> 
+                        <!-- col6 -->
+                    </div>
+                </div>
             </div>
             <!--//cont_cont-->
         </div>
