--- a/STANDARD_WEB/web/index.html
+++ b/STANDARD_WEB/web/index.html
@@ -161,7 +161,7 @@
                                 <a href="#" class="more ir_pm" title="더보기">더보기</a>
                             </div>
                             <!-- //게시판 -->            
-                            <!-- 게시판 -->
+                            <!-- 게시판2 -->
                             <div class="notice2">
                                 <h4>Web Designer Notice</h4>
                                 <ul>
@@ -173,12 +173,48 @@
                                 </ul>
                                 <a href="#" class="more ir_pm" title="더보기">더보기</a>
                             </div>
-                            <!-- //게시판 -->
+                            <!-- //게시판 유형2 -->
                         </div> 
                         <!-- col1 -->
                         <div class="column col2">
                             <h3><span class="ico_img ir_pm">아이콘</span><span class="ico_tit">Notice</span></h3>
                             <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            <!--게시판 3-->
+                            <div class="notice3">
+                                <h4>HTML Reference</h4>
+                                <ul>
+                                    <li>
+                                        <a href="#">
+                                            <img src="img/notice01.jpg" alt="이미지1">
+                                            <strong>[HTML] table</strong>
+                                            <span>table 태그는 표를 만들 때 사용합니다.</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <img src="img/notice02.jpg" alt="이미지2">
+                                            <strong>[HTML] div</strong>
+                                            <span>div 태그는 문서의 섹션을 만들거나 영역을 나눌 때 사용합니다.</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <img src="img/notice03.jpg" alt="이미지3">
+                                            <strong>[HTML] dl</strong>
+                                            <span>dl 태그는 용어를 설명하는 목록형 태그입니다.</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <img src="img/notice04.jpg" alt="이미지4">
+                                            <strong>[HTML] em</strong>
+                                            <span>em 태그는 텍스트를 강조할 때 사용합니다.</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <a href="#" class="more ir_pm" title="더보기">더보기</a>
+                            </div>
+                            <!--//게시판 3-->
                         </div> 
                         <!-- col2 -->
                         <div class="column col3">
@@ -189,11 +225,91 @@
                         <div class="column col4">
                             <h3><span class="ico_img ir_pm">아이콘</span><span class="ico_tit">Notice</span></h3>
                             <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            <!-- 오버 효과 -->
+                            <div class="notice_hover">
+                                <h4>Mouse Hover</h4>
+                                <ul>
+                                    <li>
+                                        <a href="#">
+                                            <span><img src="img/sban01.jpg" alt="이미지1"><em>바로가기</em></span>
+                                            <strong>와이어 프레임</strong>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span><img src="img/sban02.jpg" alt="이미지2"><em>바로가기</em></span>
+                                            <strong>스케치 작업</strong>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span><img src="img/sban03.jpg" alt="이미지3"><em>바로가기</em></span>
+                                            <strong>UI 디자인</strong>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- //오버 효과 -->
+                            
+                            <!--오버 효과2-->
+                            <div class="notice_hover2 mt15">
+                               <h4 class="ir_su">Mouse Hover</h4>
+                                <ul>
+                                    <li>
+                                        <a href="#">
+                                            <span><img src="img/sban04.jpg" alt="이미지4"><em>바로가기</em></span>
+                                            <strong>HTML</strong>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span><img src="img/sban05.jpg" alt="이미지5"><em>바로가기</em></span>
+                                            <strong>CSS</strong>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span><img src="img/sban06.jpg" alt="이미지6"><em>바로가기</em></span>
+                                            <strong>jQuery</strong>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- //오버 효과 2 -->
                         </div> 
                         <!-- col4 -->
                         <div class="column col5">
                             <h3><span class="ico_img ir_pm">아이콘</span><span class="ico_tit">Notice</span></h3>
                             <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            <!-- 텝메뉴 -->
+                            <div class="tab_menu">
+                                <h4 class="ir_su">탭 메뉴</h4>
+                                <ul>
+                                    <li class="active"><a href="#">공지사항1</a>
+                                        <ul>
+                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다.첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다.첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다.첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">공지사항2</a>
+                                        <ul style="display: none;">
+                                            <li><a href="#">두 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">두 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">두 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">공지사항3</a>
+                                        <ul style="display: none;">
+                                            <li><a href="#">세 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">세 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">세 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            
+                            <!-- //텝매뉴 -->
                         </div> 
                         <!-- col5 -->
                         <div class="column col6">
