--- a/STANDARD_WEB/web/index.html
+++ b/STANDARD_WEB/web/index.html
@@ -72,8 +72,8 @@
                                 <li><a href="#">블록 요소/인라인 요소</a></li>
                                 <li><a href="#">DTD 선언</a></li>
                                 <li><a href="#">언어 속성 설정</a></li>
-                                <li><a href="#">HTML &lt;title&gt;></a></li>
-                                <li><a href="#">HTML &lt;meta&gt;></a></li>
+                                <li><a href="#">HTML &lt;title&gt;</a></li>
+                                <li><a href="#">HTML &lt;meta&gt;</a></li>
                                 <li><a href="#">특수문자</a></li>
                                 <li><a href="#">하이퍼 링크</a></li>
                                 <li><a href="#">HTML &lt;style&gt;</a></li>
@@ -220,6 +220,53 @@
                         <div class="column col3">
                             <h3><span class="ico_img ir_pm">아이콘</span><span class="ico_tit">Notice</span></h3>
                             <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            <!-- 로그인 -->
+                            <div id="login-wrap">
+                                <h4 class="ir_su">로그인 정보</h4>
+                                <form id="login_form" name="login_form" action="post">
+                                    <fieldset>
+                                        <legend class="ir_su">로그인 및 관련 설정</legend>
+                                        <div class="login_header">
+                                            <h5 class="ir_su">로그인 보안</h5>
+                                            <div class="lh_check">
+                                                <input id="infor_check" type="checkbox" class="input_check">
+                                                <label for="infor_check">로그인 상태 유지</label>
+                                            </div>
+                                            <div class="lh_ip">
+                                                IP보안 <em>ON</em>
+                                            </div>
+                                        </div>
+                                        <div class="login_content">
+                                            <h5 class="ir_su">로그인 영역</h5>
+                                            <div class="lc_text">
+                                                <label for="uid" class="ir_su">아이디</label>
+                                                <input type="text" id="uid" name="uid" class="input_text" maxlength="20">
+                                                <label for="upw" class="ir_su">비밀번호</label>
+                                                <input type="password" id="upw" name="upw" class="input_text" maxlength="20">
+                                            </div>
+                                            <button class="lc_btn" type="submit">로그인</button>
+                                        </div>
+                                        <div class="login_footer">
+                                            <h5 class="ir_su">로그인 문제 해결</h5>
+                                            <ul>
+                                                <li><a href="#"><strong>회원가입</strong> / </a></li>
+                                                <li><a href="#">아이디</a>&middot;<a href="#">비밀번호 찾기</a></li>
+                                            </ul>
+                                        </div>
+                                    </fieldset>
+                                </form>
+                            </div>
+                            <!-- //로그인 -->
+                            <!-- 팝업  -->
+                            <div class="popup">
+                                <h4>Advertisement</h4>
+                                <ul>
+                                    <li><a href="#"><img src="img/sban07.jpg" alt="이미지1"></a></li>
+                                    <li><a href="#"><img src="img/sban08.jpg" alt="이미지1"></a></li>
+                                    <li class="last"><a href="#"><img src="img/sban09.jpg" alt="이미지1"></a></li>
+                                </ul>
+                            </div>
+                            <!-- //팝업 -->
                         </div> 
                         <!-- col3 -->
                         <div class="column col4">
@@ -315,6 +362,28 @@
                         <div class="column col6">
                             <h3><span class="ico_img ir_pm">아이콘</span><span class="ico_tit">Notice</span></h3>
                             <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            <!-- 갤러리 -->
+                            <div class="gallery">
+                                <h4>포트폴리오</h4>
+                                <div class="gallery_btn">
+                                    <ul>
+                                        <li class="gb_icon1"><a href="#"><span class="ir_pm">시작</span></a></li>
+                                        <li class="gb_icon2"><a href="#"><span class="ir_pm">정지</span></a></li>
+                                        <li class="gb_icon3"><a href="#"><span class="ir_pm">이전이미지</span></a></li>
+                                        <li class="gb_icon4"><a href="#"><span class="ir_pm">다음이미지</span></a></li>
+                                    </ul>
+                                </div>
+                                <div class="gallery_img">
+                                    <ul>
+                                        <li><a href="#"><img src="img/gallery01.jpg" alt="갤러리1"></a></li>
+                                        <li><a href="#"><img src="img/gallery02.jpg" alt="갤러리2"></a></li>
+                                        <li><a href="#"><img src="img/gallery03.jpg" alt="갤러리3"></a></li>
+                                        <li><a href="#"><img src="img/gallery04.jpg" alt="갤러리4"></a></li>
+                                        <li><a href="#"><img src="img/gallery05.jpg" alt="갤러리5"></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <!-- //갤러리 -->
                         </div> 
                         <!-- col6 -->
                     </div>
