Tablet basic layout

--- a/Tablet_layout/tablet_basic_layout.html
+++ b/Tablet_layout/tablet_basic_layout.html
@@ -11,17 +11,155 @@
             a {text-decoration: none;}
         </style>
         <!--헤더-->
-        <style></style>
+        <style>
+            #main_header {
+                height: 60px;
+                line-height: 60px;
+                padding-left: 10px;
+                border-bottom: 1px solid black;
+
+                background: #1D4088;
+                color: white;
+            }
+        </style>
         <!--내비게이션-->
-        <style></style>
+        <style>
+            #main_gnb {
+                overflow: hidden;
+                border-bottom: 1px solid black;
+                background: #32394A;
+            }
+
+            #main_gnb > ul.left {
+                overflow: hidden;
+                float:left;
+            }
+            #main_gnb > ul.right {
+                overflow: hidden;
+                float:right;
+            }
+            #main_gnb > ul.left > li {float:left;}
+            #main_gnb > ul.right > li {float:left;}
+
+            /*a태그 설정*/
+            #main_gnb a {
+                /*레이아웃 설정*/
+                display: block;
+                padding:10px 20px;
+
+                /*색상 설정*/
+                border-left: 1px solid #5F6673;
+                border-right: 1px solid #242A37;
+                color: white;
+                font-weight: bold;
+            }
+
+            /* 사이즈 줄이는 것 방지(반응형 이전)*/
+             body {
+                 min-width: 760px;
+             }
+        </style>
         <!--콘텐츠-->
-        <style></style>
+        <style>
+            #wrap {overflow: hidden;}
+            #wrap > #main_lnb {
+                float:left;
+                width: 200px;
+            }
+            #wrap > #content_wrap {
+                float: left;
+                width: 100%;
+                margin-right: -200px;
+            }
+            #wrap > #content_wrap > #content {
+                padding-right: 200px;
+            }
+        </style>
         <!--수직 목록-->
-        <style></style>
+        <style>
+            #wrap {background: #71B1D1;}
+            #main_lnb > ul > li > a {
+                display: block;
+                height: 40px; line-height: 40px;
+                padding-left: 15px;
+
+                border-top: 1px solid #97D6F6;
+                border-bottom: 1px solid #6298B2;
+                color: white;
+                font-weight: bold;
+            }
+        </style>
+        <!--본문-->
+        <style>
+            #content {
+                background: white;
+                border-left: 1px solid black;
+            }
+            article {
+                padding: 10px;
+            }
+        </style>
         <!--푸터-->
-        <style></style>
+        <style>
+            #main_footer {
+                padding: 10px;
+                border-top: 3px solid black;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
-
+        <header id="main_header">
+            <h1>Fluid</h1>
+        </header>
+        <nav id="main_gnb">
+            <ul class="left">
+                <li><a href="#">Button</a></li>
+                <li><a href="#">Button</a></li>
+                <li><a href="#">Button</a></li>
+                <li><a href="#">Button</a></li>
+                <li><a href="#">Button</a></li>
+                <li><a href="#">Button</a></li>
+            </ul>
+            <ul class="right">
+                <li><a href="#">Button</a></li>
+                <li><a href="#">Button</a></li>
+            </ul>
+        </nav>
+        <div id="wrap">
+            <nav id="main_lnb">
+                <ul>
+                    <li><a href="#">Button</a></li>
+                    <li><a href="#">Button</a></li>
+                    <li><a href="#">Button</a></li>
+                    <li><a href="#">Button</a></li>
+                    <li><a href="#">Button</a></li>
+                </ul>
+            </nav>
+            <div id="content_wrap">
+                <div id="content">
+                    <article>
+                        <h1>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                    </article>
+                    <article>
+                        <h1>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                    </article>
+                    <article>
+                        <h1>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+                    </article>
+                </div>
+            </div>
+        </div>
+        
+        <footer id="main_footer">
+            <h3>HTML5 + CSS3 Basic</h3>
+            <address>Website Layout Basic</address>
+        </footer>
     </body>
 </html>
