--- a/HTML5/LayoutTag.html
+++ b/HTML5/LayoutTag.html
@@ -22,19 +22,22 @@
     <span>inline_05</span>
     <!--코드상에서 밑으로 나열했어도, 실제론 옆으로 나열됨-->
 
-
     <p>block tag</p>
     <!--개행을 하지않아도 블록형식으로 한칸을 다 차지함-->
 
     <ul>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
-        <li>item</li>
+      <li>item</li>
+      <li>item</li>
+      <li>item</li>
+      <li>item</li>
+      <li>item</li>
     </ul>
 
-    <div>1111</div><div>2222</div><div>3333</div><div>4444</div><div>5555</div>
+    <div>1111</div>
+    <div>2222</div>
+    <div>3333</div>
+    <div>4444</div>
+    <div>5555</div>
     <!--div는 블럭태그로 코드상에 옆으로 나열 했어도, 밑으로 나열됨-->
 
     <div>1111</div>
@@ -43,8 +46,5 @@
     <div>4444</div>
     <div>5555</div>
     <!--div는 라인태그: 밑으로 나열됨-->
-
   </body>
-
-
 </html>
